client/styles/index.scss
body{
  margin: 0;
  background-color: #FFE3E3;
  z-index: -5;
}
h1{
  color: #C9CCD5;
  font-size: 6.5rem;
  -webkit-text-stroke-width: 2.2px;
  -webkit-text-stroke-color: #070F1C;
  margin-left: 28.3rem;
  position: relative;
  margin-bottom: -1rem;

}


button{
  -webkit-text-stroke-width: 1.2px;
  -webkit-text-stroke-color: #070F1C;
  background-color: #FFE3E3;
  width:105px;
  height: 40px;
  font-size: 1.5rem;
  font-style: italic;
  border: #070F1C 2px;
  border-radius: 5px;
}

button:hover{
  -webkit-text-stroke-width: 1.2px;
  -webkit-text-stroke-color: #93B5C6;
  border: #93B5C6 3px solid;
  color: #93B5C6;
  box-shadow: #93B5C6 1px 2.5px;
  background-color: #ffe3e3f0;

}

// ---- Header & Start ----
.header-conainter{
  margin-top: -4rem;
  z-index: 1;
}

.game-clock{
 
}


.reset-btn{
  margin-left: 75rem;
  margin-bottom: 20rem;
  z-index: 20;
}
// ---- Header & Start ----
// ---- Background Img ----
.bg-img{
  z-index: -1;
  width: 100%;
  margin-top: -17rem;
}


.bg-img2{
  z-index: -2;
margin-top: -50rem;
}
// ---- Background Img ----
// ---- GameBoard ----
.gameBoard{
  max-width: 100vw;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  flex-direction: column;
}



.gameBoard-container{
  height: 440px;
  width: 440px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin: auto;
  padding: 5px;
  justify-content: center;
  z-index: 1;
  margin-top: -30.8rem;
}


.gameBoard-cell{
  border: 4px solid #C9CCD5;
  height: 120px;
  width: 120px;
  margin: 5px;
  background-color: #93B5C6;
  border-radius: 8px;
}

.gameBoard-cell:hover{
  border: 4px solid #93B5C6;
  background-color: #C9CCD5;
  transform: scale(1.02);
}


.cell-text{
  font-size: 6.5rem;
  margin-top: 3.5px;
  margin-left: 23px;
  color: #E4D8DC;
}
// ---- GameBoard ----

